# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/wasm.gni")
import("//third_party/skia/gn/core.gni")

_canvaskit_path = rebase_path("//third_party/skia/modules/canvaskit")

wasm_lib("canvaskit") {
  export_name = "CanvasKitInit"

  sources = skia_core_sources + [
              # "$_canvaskit_path/paragraph_bindings.cpp",
              "$_canvaskit_path/canvaskit_bindings.cpp",
            ]

  configs = [ "//build/config/compiler:rtti" ]

  pre_js = [
    "$_canvaskit_path/debug.js",
    "$_canvaskit_path/preamble.js",
    "$_canvaskit_path/helper.js",
    "$_canvaskit_path/interface.js",
    "$_canvaskit_path/cpu.js",
    "$_canvaskit_path/gpu.js",
    "$_canvaskit_path/pathops.js",
    "$_canvaskit_path/rt_shader.js",
    "$_canvaskit_path/font.js",
    "$_canvaskit_path/paragraph.js",
    "$_canvaskit_path/postamble.js",
  ]

  post_js = [ "$_canvaskit_path/ready.js" ]

  defines = [
    "EMSCRIPTEN_HAS_UNBOUND_TYPE_NAMES=0",
    "SKNX_NO_SIMD",
    "SK_DISABLE_AAA",
    "SK_DISABLE_EFFECT_DESERIALIZATION",
    "SK_FORCE_8_BYTE_ALIGNMENT",
    "SK_DISABLE_LEGACY_SHADERCONTEXT",
    "SK_RELEASE",
    "GR_GL_CHECK_ALLOC_WITH_GET_ERROR=0",
    "SK_DISABLE_TRACING",
    "SK_SUPPORT_GPU=1",
    "SK_GL",
    "SK_DISABLE_LEGACY_SHADERCONTEXT",
    "SK_INCLUDE_PATHOPS",
    "SK_INCLUDE_RUNTIME_EFFECT",
    "SK_INCLUDE_PARAGRAPH=1",
  ]

  cflags = [
    "-lEGL",
    "-lGLESv2",
  ]

  ldflags = [
    "-lEGL",
    "-lGLESv2",
    "-s",
    "USE_WEBGL2=1",
  ]

  deps = [
    "//third_party/skia",
    "//third_party/skia/modules/skparagraph",
    "//third_party/skia/modules/skshaper",
  ]
}

group("wasm") {
  public_deps = [ ":canvaskit" ]
}
