# Copyright 2022 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This BUILD.gn is kept separate from //flutter/BUILD.gn because
# //flutter/BUILD.gn pulls in Flutter SDK dependencies which will crash
# when the target CPU is WASM.

import("//build/toolchain/wasm.gni")
import("//flutter/common/config.gni")

# This is the default target when building when the target CPU is WASM.
group("wasm") {
  if (flutter_build_web_sdk) {
    deps = [ "//flutter/web_sdk" ]
  }
}

wasm_toolchain("canvaskit") {
  extra_toolchain_args = {
    skia_use_icu = true
  }
}

wasm_toolchain("canvaskit_lite") {
  extra_toolchain_args = {
    skia_use_icu = false
  }
}
