# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/common/config.gni")
import("//flutter/impeller/tools/impeller.gni")

impeller_component("golden_playground_test") {
  testonly = true
  sources = [
    "golden_playground_test.cc",
    "golden_playground_test.h",
  ]

  deps = [
    "//flutter/fml",
    "//flutter/impeller/aiks",
    "//flutter/impeller/playground",
    "//flutter/testing:testing_lib",
  ]
}

if (is_mac) {
  impeller_component("impeller_golden_tests") {
    target_type = "executable"

    testonly = true

    sources = [
      "golden_digest.cc",
      "golden_digest.h",
      "golden_tests.cc",
      "main.cc",
      "metal_screenshot.h",
      "metal_screenshot.mm",
      "metal_screenshoter.h",
      "metal_screenshoter.mm",
      "working_directory.cc",
      "working_directory.h",
    ]

    deps = [
      "//flutter/impeller/aiks",
      "//flutter/impeller/aiks:aiks_unittests_golden",
      "//flutter/impeller/fixtures",
      "//flutter/impeller/playground",
      "//flutter/impeller/renderer/backend/metal:metal",
      "//third_party/googletest:gtest",
    ]
  }
}
