# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/third_party/flatbuffers/flatbuffers.gni")
import("../tools/impeller.gni")

flatbuffers("shader_bundle_flatbuffers") {
  flatbuffers = [ "shader_bundle.fbs" ]
  public_configs = [ "//flutter/impeller/runtime_stage:runtime_stage_config" ]
  public_deps = [
    "//flutter/impeller/runtime_stage:runtime_stage_flatbuffers",
    "//flutter/impeller/runtime_stage:runtime_stage_types_flatbuffers",
    "//flutter/third_party/flatbuffers",
  ]
}

impeller_component("shader_bundle") {
  sources = [
    "shader.cc",
    "shader.h",
    "shader_bundle.cc",
    "shader_bundle.h",
  ]
  public_deps = [
    ":shader_bundle_flatbuffers",
    "../base",
    "../core",
    "//flutter/fml",
    "//flutter/impeller/runtime_stage:runtime_stage",
  ]
}
