# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ns_net") {
  sources = [
    "allocation_builder.cc",
    "allocation_builder.h",
    "data_pipe_flusher.cc",
    "data_pipe_flusher.h",
    "network_service_impl.h",
    "network_service_impl.mm",
    "url_loader_impl.h",
    "url_loader_impl.mm",
  ]

  deps = [
    "//base:base",
    "//lib/ftl",
    "//mojo/data_pipe_utils",
    "//mojo/message_pump:message_pump",
    "//mojo/public/cpp/application",
    "//mojo/public/cpp/bindings:utility",
    "//mojo/services/network/interfaces",
  ]
}
