# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/shell/config.gni")

source_set("gpu_surface_common") {
  sources = [
    "gpu_surface_delegate.h",
    "persistent_cache.cc",
    "persistent_cache.h",
    "surface.cc",
    "surface.h",
  ]

  public_deps = [
    "//flutter/assets",
    "//flutter/flow",
    "//flutter/fml",
    "//flutter/shell/version",
    "//third_party/rapidjson",
    "//third_party/skia",
  ]
}

source_set("gpu_surface_software") {
  sources = [
    "gpu_surface_software.cc",
    "gpu_surface_software.h",
    "gpu_surface_software_delegate.cc",
    "gpu_surface_software_delegate.h",
  ]

  public_deps = [
    ":gpu_surface_common",
  ]
}

source_set("gpu_surface_gl") {
  sources = [
    "gpu_surface_gl.cc",
    "gpu_surface_gl.h",
    "gpu_surface_gl_delegate.cc",
    "gpu_surface_gl_delegate.h",
  ]

  public_deps = [
    ":gpu_surface_common",
  ]
}

source_set("gpu_surface_vulkan") {
  sources = [
    "gpu_surface_vulkan.cc",
    "gpu_surface_vulkan.h",
    "gpu_surface_vulkan_delegate.cc",
    "gpu_surface_vulkan_delegate.h",
  ]

  public_deps = [
    ":gpu_surface_common",
    "//flutter/vulkan",
  ]
}

source_set("gpu_surface_metal") {
  sources = [
    "gpu_surface_metal.h",
    "gpu_surface_metal.mm",
  ]

  public_deps = [
    ":gpu_surface_common",
  ]
}
